# PARSER-SQL

./: BPTree.cpp  BPTree.h  BTree.h  CMakeLists.txt  ExtendibleHashing.cpp  ExtendibleHashing.h  Leaf.cc  Leaf.h  Node.cc  Node.h  README.md  SequentialFile.cpp  SequentialFile.h  ast.cpp  ast.dot  ast.h  data.csv  grammar.txt  hola.csv  hola.py  main.cpp  parser.cpp  parser.h  pruebaBPTree.cpp  run_all_inputs.py  scanner.cpp  scanner.h  token.cpp  token.h  visitor.cpp  visitor.h
archivos/: hola.indexes  hola.schema  hola_altura.btree  hola_edad.btree  hola_genero.btree
inputs/: input0.txt  input1.txt  input10.txt  input11.txt  input12.txt  input2.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
libspatialindex/src/rtree/: BulkLoader.cc  BulkLoader.h  Leaf.cc  Leaf.h  Node.cc  RTree.cc
outputs/: output0.txt  output1.txt  output10.txt  output11.txt  output12.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  output9.txt  tokens_0.txt  tokens_1.txt  tokens_11.txt  tokens_12.txt  tokens_2.txt  tokens_3.txt  tokens_4.txt  tokens_5.txt  tokens_6.txt  tokens_7.txt  tokens_8.txt
pruebas/: pruebaBPTree.cpp  pruebaEHashing.cpp
rtree/: CMakeLists.txt  KNNVisitor.h  MiPagedDiskStorageManager.h  RangeSearchVisitor.h  main.cpp
